<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">first</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Show Position</string>
    <string name="list_item_element">el</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dayforecast_list">DayForecasts</string>
    <string name="title_dayforecast_detail">DayForecast Detail</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="pref_latitude_label">Latitude</string>
    <string name="pref_latitude_key" translatable="false">latitude</string>
    <string name="pref_latitude_default" translatable="false">42.364757</string>
    <string name="pref_longitude_label">Longitude</string>
    <string name="pref_longitude_key" translatable="false">longitude</string>
    <string name="pref_longitude_default" translatable="false">13.3857661</string>
    <string name="pref_unit_key" translatable="false">unit</string>
    <string name="pref_unit_default" translatable="false">metric</string>
    <string name="pref_units_imperial" >imperial</string>
    <string name="pref_units_metric" >metric</string>
</resources>
